review item align fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -232,7 +232,8 @@ html {
     display: flex;
     align-content: center;
     align-items: center;
-    flex-direction: column
+    flex-direction: column;
+    align-items: flex-start;
     
 }
 
